--- a/ThienNga2/Views/ProductItem/NewProductItem.cshtml
+++ b/ThienNga2/Views/ProductItem/NewProductItem.cshtml
@@ -11,6 +11,12 @@
     <link rel="stylesheet" type="text/css" href="~/Content/Table.css">
     <script src="http://www.google.com/jsapi"></script>
     <link rel="stylesheet" href="~/Content/jquery-ui.css" type="text/css">
+    <script src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"> </script>
+    <script src="https://cdn.datatables.net/1.10.12/js/dataTables.bootstrap.min.js"> </script>
+
+
+    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.12/css/dataTables.bootstrap.min.css" />
     <style>
         .form-control { 
              border: 2px solid #dadada;
@@ -56,7 +62,8 @@
             var quantity = $('#items_' + (index - 1) + '__quantity').val();
             var CKTT = $('#items_' + (index - 1) + '__chietKhauTrucTiep').val();
             var CKPT = $('#items_' + (index - 1) + '__chietKhauPhanTram').val();
-            var temp3 = temp * quantity * (100 - CKPT)/100 - CKTT;
+            var temp3 = temp * quantity * (100 - CKPT) / 100 - CKTT;
+            temp3 = Math.floor(temp3);
             $('#items_' + (index - 1) + '__thanhTienS').val(numberWithCommas(temp3));
             $('#items_' + (index - 1) + '__thanhTien').val(temp3);
         }
@@ -188,7 +195,7 @@
                 </div>
 
                 <div class="section"><span>2</span>Thông tin sản phẩm</div>
-                <table class="responstable">
+                <table class="table table-striped table-bordered" cellspacing="0" width="100%">
                     <label>Lấy từ kho @Html.DropDownListFor(Model => Model.inventoryID, ls2)</label>
                     @for (var i = 0; i < Model.items.Count; i++)
                     {
@@ -199,7 +206,7 @@
                         @*<div class="inner-wrap" id="@idd">*@
                             <tr id="@idd">
                                 <td >
-                                    <label>Tên/Mã nhà máy/Mã cửa hàng @Html.TextBoxFor(Model => Model.items[i].SKU, new { @class = "form-control" })</label>
+                                    <label>Tên/Mã nhà máy/SKU @Html.TextBoxFor(Model => Model.items[i].SKU, new { @class = "form-control" })</label>
                                 </td>
                                 <td>
 
