--- a/ThienNga2/Views/Home/Index.cshtml
+++ b/ThienNga2/Views/Home/Index.cshtml
@@ -5,7 +5,12 @@
 <head>
     <style>
         body {
-         background: url('images/flying-drones.jpg') no-repeat center center fixed;
+            background: url('Content/images/flying-drones.jpg') no-repeat center center fixed;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
+           
         }
     </style>
 </head>
