--- a/ThienNga2/Views/Warranty/WarrantyCheck.cshtml
+++ b/ThienNga2/Views/Warranty/WarrantyCheck.cshtml
@@ -223,6 +223,8 @@
                     {
 
                         <input type="hidden" name="actid" value="@item.id"/>
+                        
+                            <input type="hidden" id="codebaohanh" value="@item.CodeBaoHanh" />
                         <table class="table table-striped table-bordered" cellspacing="0" width="100%">
                             <tr>
                                 <th colspan="2">   
