--- a/ThienNga2/Views/Warranty/WarrantyCheck.cshtml
+++ b/ThienNga2/Views/Warranty/WarrantyCheck.cshtml
@@ -233,7 +233,7 @@
                             </tr>
                             <tr>
                                 <td>Ngày tiếp nhận : </td>
-                                <td>@item.startDate </td>
+                                <td>@(item.startDate.Day+"/"+item.startDate.Month+"/" + item.startDate.Year) </td>
                             </tr>
                             <tr>
                                 <td>Nhân viên nhận:</td>
