--- a/ThienNga2/Content/agency.css
+++ b/ThienNga2/Content/agency.css
@@ -4,7 +4,7 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 body {
-   
+    background-color : #F7F8F9;
     background-size: cover;
     overflow-x: hidden;
     font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
