--- a/ThienNga2/Views/KickHoatBaoHanh/index.cshtml
+++ b/ThienNga2/Views/KickHoatBaoHanh/index.cshtml
@@ -146,7 +146,7 @@
                                     @war.warrantyID
                                 </td>
                                 <td>
-                                    @war.startdate
+                                    @war.startdate.ToString("dd/MM/yyyy")
                                 </td>
                                 <td>
                                     @war.duration
