--- a/ThienNga2/Views/Warranty/WarrantyCheck.cshtml
+++ b/ThienNga2/Views/Warranty/WarrantyCheck.cshtml
@@ -108,6 +108,129 @@
 
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.12/css/dataTables.bootstrap.min.css" />
+    <style>
+      
+        .hiddenStepInfo {
+            display: none;
+        }
+
+        .activeStepInfo {
+            display: block !important;
+        }
+
+        .underline {
+            text-decoration: underline;
+        }
+
+        .step {
+            margin-top: 27px;
+        }
+
+        .progress {
+            position: relative;
+            height: 25px;
+        }
+
+            .progress > .progress-type {
+                position: absolute;
+                left: 0px;
+                font-weight: 800;
+                padding: 3px 30px 2px 10px;
+                color: rgb(255, 255, 255);
+                background-color: rgba(25, 25, 25, 0.2);
+            }
+
+            .progress > .progress-completed {
+                position: absolute;
+                right: 0px;
+                font-weight: 800;
+                padding: 3px 10px 2px;
+            }
+
+        .step {
+            text-align: center;
+            
+        }
+
+            .step .col-md-2 {
+                background-color: #fff;
+                border: 1px solid #C0C0C0;
+                border-right: none;
+            }
+
+                .step .col-md-2:last-child {
+                    border: 1px solid #C0C0C0;
+                }
+
+                .step .col-md-2:first-child {
+                    border-radius: 5px 0 0 5px;
+                }
+
+                .step .col-md-2:last-child {
+                    border-radius: 0 5px 5px 0;
+                }
+
+                .step .col-md-2:hover {
+                    color: #F58723;
+                    cursor: pointer;
+                }
+
+            .step .activestep {
+                color: #F58723;
+                height:50px;
+                margin-top: -7px;
+                padding-top: 7px;
+                border-left: 6px solid #5CB85C !important;
+                border-right: 6px solid #5CB85C !important;
+                border-top: 3px solid #5CB85C !important;
+                border-bottom: 3px solid #5CB85C !important;
+                vertical-align: central;
+            }
+
+            .step .fa {
+                padding-top: 15px;
+                font-size: 40px;
+            }
+    </style>
+
+    <script type="text/javascript">
+    function resetActive(thisID, step) {
+        var tab = document.getElementById(thisID);
+        $("div").each(function () {
+            if ($(this).hasClass("activestep")) {
+                $(this).removeClass("activestep");
+            }
+        });
+
+        if (tab.className == "col-md-2") {
+            $(tab).addClass("activestep");
+        }
+        else {
+            $(tab.parentNode).addClass("activestep");
+        }
+
+        hideSteps();
+        showCurrentStepInfo(step);
+    }
+
+    function hideSteps() {
+        $("div").each(function () {
+            if ($(this).hasClass("activeStepInfo")) {
+                $(this).removeClass("activeStepInfo");
+                $(this).addClass("hiddenStepInfo");
+            }
+        });
+    }
+
+    function showCurrentStepInfo(step) {
+        var id = "#step-" + step;
+        $(id).addClass("activeStepInfo");
+    }
+    $(document).ready(function () {
+        var data = $("#datastatus").text();
+        resetActive("divtab" + data, data);
+    });
+    </script>
 </head>
 <body>
 
@@ -208,32 +331,34 @@
 
                     </table>
                 }
-                else {
-                    <font color="red">Ko tìm thấy kết quả nào</font> 
+                else
+                {
+                    <font color="red">Ko tìm thấy kết quả nào</font>
                 }
             </div>
         }
     }
 
-    @if ( ViewData["warrantyDetail"] != null) {
+    @if (ViewData["warrantyDetail"] != null)
+    {
         if (ViewData["thisAct"] != null)
         {
             <ul class="nav nav-pills">
                 <li class="active"><a data-toggle="pill" href="#home">Tổng quan về sản phẩm</a></li>
                 <li><a data-toggle="pill" href="#menu1">Trạng thái bảo hành</a></li>
-                <li><a data-toggle="pill" href="#menu2">Chí phí bảo hành</a></li>
+                <li><a data-toggle="pill" href="#menu2">Chi phí bảo hành</a></li>
                 <li><a data-toggle="pill" href="#menu3">Lịch sử bảo hành</a></li>
             </ul>
         }
         else
         {
             <ul class="nav nav-pills">
-                <li class="active"><a data-toggle="pill" href="#home">Tổng quan</a></li>            
+                <li class="active"><a data-toggle="pill" href="#home">Tổng quan</a></li>
                 <li><a data-toggle="pill" href="#menu3">Lịch sử bảo hành</a></li>
             </ul>
         }
     }
-   
+
     <div class="tab-content">
         <div id="home" class="tab-pane fade in active">
             @if (ViewData["warrantyDetail"] != null)
@@ -247,7 +372,7 @@
                             <td>
                                 <p>Tên sản phẩm: @it.tb_product_detail.productName </p>
                                 <p>SKU: @it.tb_product_detail.productStoreID</p>
-                           
+
                                 <p>IMEI sản phẩm: @t.warrantyID </p>
 
                                 <p>Ngày Kích Hoạt: @t.startdate</p>
@@ -337,12 +462,14 @@
                         </tr>
                         <tr>
                             <td>Tình trạng lúc nhận:</td>
+                            <div id="datastatus" hidden="hidden">@item.status</div>
                             <td>@item.Description</td>
                         </tr>
 
 
                         <tr>
                             <td>Trạng thái hiện tại </td>
+                            
                             <td> @item.tb_warrnaty_status.statusName </td>
 
                         </tr>
@@ -353,16 +480,33 @@
 
                         </tr>
 
-                        <tr id="dateBanGiao" style="display: none;">
+                        <tr id="dateBanGiao" >
                             <td>Ngày bàn giao  </td>
-                            <td> Ngày <input type="text" name="day1" />Tháng  <input type="text" name="month1" />Năm<input type="text" name="year1" /></td>
+                            @if (item.finishFixingDate != null)
+                            {
+                                <td> Ngày <input type="text" name="day1" value="@(((DateTime)item.finishFixingDate).Day)" />Tháng  <input type="text" name="month1" value="@(((DateTime)item.finishFixingDate).Month)"/>Năm<input type="text" name="year1" value="@(((DateTime)item.finishFixingDate).Year)"/></td>
+                            }
+                            else
+                            {
+                                <td> Ngày <input type="text" name="day1" />Tháng  <input type="text" name="month1" />Năm<input type="text" name="year1" /></td>
+                            }
+                            
                         </tr>
 
                         <tr></tr>
 
-                        <tr id="dateFinish" style="display: none;">
+                        <tr id="dateFinish" >
                             <td>Ngày sửa xong  </td>
-                            <td> Ngày <input type="text" name="day2" />Tháng  <input type="text" name="month2" />Năm<input type="text" name="year2" /></td>
+                            @if (item.realeaseDATE != null)
+                            {
+                                
+                              <td> Ngày <input type = "text" name = "day2" value = "@(((DateTime)item.realeaseDATE).Day)"/> Tháng <input type = "text" name = "month2" value = "@(((DateTime)item.realeaseDATE).Month)"/> Năm <input type = "text" name = "year2" value = "@(((DateTime)item.realeaseDATE).Year)"/></td>
+                            }
+                            else
+                            {
+                                <td> Ngày <input type="text" name="day2" />Tháng  <input type="text" name="month2" />Năm<input type="text" name="year2" /></td>
+                            }
+                       
                         </tr>
 
                         <tr>
@@ -373,6 +517,98 @@
 
                     </table>
                 }
+                <div class="container" style="margin-top: 100px; margin-bottom: 100px;">
+                
+                    <div class="row">
+                        <div class="row step">
+                            <div id="divtab1" class="col-md-2" >
+                              
+                                <p>Đang kiểm tra</p>
+                            </div>
+                            <div class="col-md-2 activestep" id="divtab6" >
+                           
+                                <p>Đang đợi khách xác nhận</p>
+                            </div>
+                            <div class="col-md-2" id="divtab2">
+                          
+                                <p>Đang sửa</p>
+                            </div>
+                            <div class="col-md-2" id="divtab3">
+                          
+                                <p>Đã sửa xong</p>
+                            </div>
+                            <div class="col-md-2" id="divtab4">
+                            
+                                <p>Đã giao</p>
+                            </div>
+                            <div class="col-md-2"  id="divtab5">
+                            
+                                <p>Đã giao nhưng chưa sửa</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row setup-content step hiddenStepInfo" id="step-1">
+                        <div class="col-xs-12">
+                            <div class="col-md-12 well text-center">
+                                <h1>ĐANG KIỂM TRA</h1>
+                                <div class="underline">Sản phẩm đang được nhân viên kiểm tra lỗi</div>
+                                <img src="~/Content/images/checking.png" />
+                               
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row setup-content step activeStepInfo" id="step-6">
+                        <div class="col-xs-12">
+                            <div class="col-md-12 well text-center">
+                                <h1>ĐANG ĐỢI KHÁCH HÀNG XÁC NHẬN</h1>
+                                <div class="underline">Việc sửa chữa yêu cầu phí sữa chữa hoặc linh kiện thay thế, yêu cầu khách hàng xác nhận đồng ý sữa chữa</div>
+
+                                <img src="~/Content/images/waitingree.png" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row setup-content step hiddenStepInfo" id="step-2">
+                        <div class="col-xs-12">
+                            <div class="col-md-12 well text-center">
+                                <h1>ĐANG SỬA CHỮA</h1>
+                                <div class="underline">Thiết bị đang trong quá trình sửa chữa</div>
+
+                                <img src="~/Content/images/reparing.png" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row setup-content step hiddenStepInfo" id="step-3">
+                        <div class="col-xs-12">
+                            <div class="col-md-12 well text-center">
+                                <h1>SỮA CHỮA HOÀN TẤT</h1>
+                                <div class="underline">Thiết bị đã được sửa xong và đang chờ được giao cho khách hàng </div>
+
+
+                                <img src="~/Content/images/donefixing.png" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row setup-content step hiddenStepInfo" id="step-4">
+                        <div class="col-xs-12">
+                            <div class="col-md-12 well text-center">
+                                <h1>ĐÃ ĐƯỢC GIAO CHO KHÁCH HÀNG</h1>
+                                <div class="underline">Thiệt bị được sửa chữa thành công và đã được giao trả cho khách hàng</div>
+
+                                <img src="~/Content/images/done.png" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row setup-content step hiddenStepInfo" id="step-5">
+                        <div class="col-xs-12">
+                            <div class="col-md-12 well text-center">
+                                <h1>CÓ TRỤC TRẶC TRONG QUÁ TRÌNH SỮA CHỮA</h1>
+                                <div class="underline">Thihết bị đã được giao cho khách hàng, nhưng vì nhiều lí do nên thiết bị chưa được sửa chữa</div>
+
+                                <img src="~/Content/images/error.png" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
 
@@ -422,7 +658,7 @@
                                             @using (Html.BeginForm("XoaFee", "Warranty"))
                                             {
                                                 <input type="hidden" name="feeID" value="@fee.id" />
-                                                        <input type="hidden" name="activitiesID" value="@item.itemID" />
+                                                <input type="hidden" name="activitiesID" value="@item.itemID" />
                                                         <input type="submit" name="Xóa" value="Xóa" />
                                             }
                                         </td>
@@ -439,7 +675,7 @@
                                         @using (Html.BeginForm("XoaFee", "Warranty"))
                                         {
                                             <input type="hidden" name="feeID" value="@fee.id" />
-                                                    <input type="hidden" name="activitiesID" value="@item.itemID" />
+                                            <input type="hidden" name="activitiesID" value="@item.itemID" />
                                                     <input type="submit" name="Xóa" value="Xóa" />
                                         }
                                     </td>
@@ -498,7 +734,7 @@
                             <td>
                                 @using (Html.BeginForm("XoaFixingFee", "Warranty"))
                                 {<input type="hidden" name="feeID" value="@fee.id" />
-                                        <input type="hidden" name="activitiesID" value="@item.itemID" />
+                                <input type="hidden" name="activitiesID" value="@item.itemID" />
                                         <input type="submit" name="Xóa" value="Xóa" />
                                 }
                             </td>
